--- a/traffic-sample1/app-v2.yaml
+++ b/traffic-sample1/app-v2.yaml
@@ -2,7 +2,7 @@
 ##################################################################################################
 # service1
 ##################################################################################################
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: service1-v2
@@ -29,7 +29,7 @@ spec:
 ##################################################################################################
 # service2
 ##################################################################################################
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: service2-v2
@@ -56,7 +56,7 @@ spec:
 ##################################################################################################
 # service3
 ##################################################################################################
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: service3-v2
@@ -84,7 +84,7 @@ spec:
 # service4
 ##################################################################################################
 
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: service4-v2
@@ -112,7 +112,7 @@ spec:
 # service5
 ##################################################################################################
 
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: service5-v2
