--- a/traffic-sample1/app-v2.yaml
+++ b/traffic-sample1/app-v2.yaml
@@ -8,6 +8,10 @@ metadata:
   name: service1-v2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        app: service1
+        version: v2
   template:
     metadata:
       labels:
@@ -35,6 +39,10 @@ metadata:
   name: service2-v2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        app: service2
+        version: v2
   template:
     metadata:
       labels:
@@ -62,6 +70,10 @@ metadata:
   name: service3-v2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        app: service3
+        version: v2
   template:
     metadata:
       labels:
@@ -90,6 +102,10 @@ metadata:
   name: service4-v2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        app: service4
+        version: v2
   template:
     metadata:
       labels:
@@ -118,6 +134,10 @@ metadata:
   name: service5-v2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        app: service5
+        version: v2
   template:
     metadata:
       labels:
