--- a/traffic-sample1/sleep.yaml
+++ b/traffic-sample1/sleep.yaml
@@ -4,6 +4,9 @@ metadata:
   name: sleep
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        app: sleep
   template:
     metadata:
       labels:
